<resources>
    <string name="app_name">ColectiLog</string>

    <string name="nav_header_title">ColectiLog v2.42.0</string>
    <string name="nav_header_subtitle" translatable="false">sergio.calderon@alu.ing.unlp.edu.ar</string>

    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Anterior</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_drawer">DrawerActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="colectivos">Colectivos</string>
    <string name="trenes">Trenes</string>
    <string name="title_activity_stop_creator">Creador de Paradas</string>
    <string name="done">Hecho</string>
    <string name="new_stop">Nueva Parada</string>
    <string name="write_stop_name">Ingrese un nombre único</string>
    <string name="stop_name_example">Parada Av. 1 y 50</string>
    <string name="write_latitude">Ingrese latitud</string>
    <string name="double_value_example" translatable="false">0.0</string>
    <string name="write_longitude">Ingrese longitud</string>
    <string name="stops">Paradas</string>
    <string name="editing_stop">Editando Parada</string>
    <string name="action_delete">Borrar</string>
    <string name="select_type">Seleccione tipo</string>
    <string name="new_travel">Nuevo Viaje</string>
    <string name="line">Línea</string>
    <string name="line_example">Ingrese un número</string>
    <string name="write_ramal">Ramal (opcional)</string>
    <string name="date">Fecha</string>
    <string name="start_hour">Hora de subida</string>
    <string name="select_start_place">Lugar de subida</string>
    <string name="select_end_place">Lugar de bajada</string>
    <string name="travels">Mis Viajes</string>
    <string name="edit_travel">Editando Viaje</string>
    <string name="next_ones">Próximos Arribos</string>
    <string name="next_ones_to">Próximos Destinos</string>
    <string name="next_is">Siguiente es el %1$s</string>
    <string name="next_to">Llega el %1$s a las %2$s</string>
    <string name="take_in">Tomar en %1$s</string>
    <string name="arrives_at">Llega a las %1$s</string>
    <string name="destination">Destino: %1$s</string>
    <string name="price">Precio</string>
    <string name="this_month_balance">Resumen del mes</string>
    <string name="coffee">Café</string>
    <string name="hour">Hora</string>
    <string name="charge">Recarga de saldo</string>
    <string name="mount">Monto</string>
    <string name="charge_mount">Monto de la recarga</string>
    <string name="confirm">Confirmar</string>
    <string name="last_charge_info">Tu última recarga fue de $%1$d el día %2$s</string>
    <string name="current_money">Saldo: %1$s</string>
    <string name="porcentage_value">%d%%</string>
    <string name="combination_info">Combina: Ramal %1$s (%2$s)</string>
    <string name="service_title">%1$d - %2$s</string>
    <string name="destination_full">A %1$s (%2$s)</string>
    <string name="arrival_time">Hora %1$s</string>
    <string name="default_train_line" translatable="false">Roca</string>
    <string name="next_ones_in">Próximos en %1$s</string>
    <string name="coords" translatable="false">%1$f, %2$f</string>
    <string name="distance_km">Distancia: %1$s</string>
    <string name="title_activity_test">TestActivity</string>
    <string name="train_price">Tarifa: %1$s</string>
    <string name="proximity_porcentage">%1$.2f%% de cercania</string>
    <string name="bus" translatable="false">Bus</string>
    <string name="train">Tren</string>
    <string name="new_train_travel">Nuevo viaje en Tren</string>
    <string name="ingrese_nuevo_valor">Ingrese el nuevo valor</string>
    <string name="x_travels_done">%1$d viajes realizados</string>
    <string name="number_x_in_ranking">#%1$d en tu ranking</string>

    <!-- live-a1-0 -->
    <string name="traveling_now">En viaje</string>
    <string name="live">En vivo</string>
    <string name="path">Recorrido</string>
    <string name="progress">Progreso</string>
    <string name="end_hour">Hora de bajada</string>
    <string name="manage_lines">Administrar lineas</string>
    <string name="choose_color">Elegir color</string>
    <string name="alternative_name">Apodo</string>
    <string name="ramal_list">Ramales</string>
    <string name="you_pay_percent">Pagás el %1$d%%</string>
    <string name="manage_zones">Administrar zonas</string>
    <string name="name">Nombre</string>
    <string name="radix">Radio (en km)</string>
    <string name="zone">Zona</string>
    <string name="stop">Parada</string>
    <string name="train_travel">Viaje en tren</string>
    <string name="bus_travel">Viaje en colectivo</string>
    <string name="open_map">Abrir mapa</string>
    <string name="unknown_zone">Zona sin definir</string>
    <string name="people_count">Pasajeros (que pagaste)</string>
    <string name="rating">Calificación</string>
    <string name="start">Subida</string>
    <string name="end">Bajada</string>
    <string name="last_coffee_info">La última vez que compraste uno fue el día %1$d/%2$d</string>
    <string name="current_money_info">Tu SUBE ahora tiene $%d pesos</string>
    <string name="destinations">Destinos</string>
    <string name="all">Todos</string>
    <string name="car_travel">Viaje en auto</string>
    <string name="new_travel_by_car">Nuevo viaje en Auto</string>
    <string name="from_stop">Desde %1$s</string>
    <string name="speed_kmh">Velocidad: %1$.1f km/h</string>
    <string name="linear_distance_km">Distancia recta: %1$.1f km</string>
    <string name="total_distance_km">Distancia total: %1$.1f km</string>
    <string name="waiting">Esperar</string>
    <string name="travelling">En viaje</string>
    <string name="arriving">Llegando</string>
    <string name="edit">Editar</string>
    <string name="metro">Subte</string>
    <string name="car">Auto</string>
    <string name="metro_travel">Viaje en Subte</string>
    <string name="go_back">Volver</string>
    <string name="combining">Combinar</string>
    <string name="this_month">Este mes</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="paths">Recorridos</string>
    <string name="current_month">Mes actual</string>
    <string name="last_month">Mes pasado</string>
    <string name="direction">Sentido %1$s</string>
    <string name="north">Norte</string>
    <string name="west">Oeste</string>
    <string name="east">Este</string>
    <string name="south">Sur</string>
    <string name="spent_by_line">Gasto por línea</string>
    <string name="time_by_line">Tiempo por línea</string>
    <string name="line_number">Línea %1$d</string>
    <string name="compass">Brújula</string>
    <string name="continue_straight">Sigue derecho</string>
    <string name="from">Desde</string>
    <string name="to">Hasta</string>
    <string name="sort_by">Ordenar por</string>
</resources>