<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:title="@string/menu_home"
            android:icon="@drawable/ic_home"/>

        <item
            android:id="@+id/nav_live"
            android:title="@string/live"
            android:icon="@drawable/ic_wifi_tethering"/>

        <item
            android:id="@+id/nav_colectivos"
            android:title="@string/this_month_balance"
            android:icon="@drawable/ic_savings"/>

        <item
            android:id="@+id/nav_lines"
            android:title="@string/manage_lines"
            android:icon="@drawable/ic_bus"/>

        <item
            android:id="@+id/nav_zones"
            android:title="@string/manage_zones"
            android:icon="@drawable/ic_radar"/>

        <item
            android:id="@+id/nav_trenes"
            android:title="@string/travels"
            android:icon="@drawable/ic_calendar_month"/>

        <item
            android:id="@+id/nav_paradas"
            android:title="@string/stops"
            android:icon="@drawable/ic_edit_location"/>

        <item
            android:id="@+id/nav_paths"
            android:title="@string/paths"
            android:icon="@drawable/ic_near_me" />

    </group>
</menu>