<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="cs10.apps.travels.tracer.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_colectivos"
        android:name="cs10.apps.travels.tracer.ui.stats.MonthSummaryFragment"
        android:label="@string/this_month_balance"
        tools:layout="@layout/fragment_buses" />

    <fragment
        android:id="@+id/nav_trenes"
        android:name="cs10.apps.travels.tracer.ui.travels.MyTravelsFragment"
        android:label="@string/travels"
        tools:layout="@layout/fragment_travels" />

    <fragment
        android:id="@+id/nav_proximos"
        android:name="cs10.apps.travels.tracer.ui.stops.NextArrivalsFragment"
        android:label="@string/next_ones"
        tools:layout="@layout/fragment_stops" />

    <fragment
        android:id="@+id/nav_prox_destinos"
        android:name="cs10.apps.travels.tracer.ui.stops.NextDestinationsFragment"
        android:label="@string/next_ones_to"
        tools:layout="@layout/fragment_stops" />

    <fragment
        android:id="@+id/nav_paradas"
        android:name="cs10.apps.travels.tracer.ui.stops.StopListFragment"
        android:label="@string/stops"
        tools:layout="@layout/fragment_stops" />

    <fragment
        android:id="@+id/nav_charge"
        android:name="cs10.apps.travels.tracer.ui.charge.ChargeFragment"
        android:label="@string/charge"
        tools:layout="@layout/fragment_charge"/>
</navigation>