<?xml version="1.0" encoding="utf-8"?>
<!-- Nested works, normal doesn't -->
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:padding="16dp"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        android:orientation="vertical">

        <include
            android:id="@+id/red_sube_header"
            layout="@layout/module_red_sube"
            android:visibility="gone" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/line"
            android:layout_marginTop="16dp"
            android:textSize="20sp"/>

        <EditText
            android:id="@+id/et_line"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:autofillHints="line"
            android:hint="@string/line_example"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/write_ramal"
            android:layout_marginTop="16dp"
            android:textSize="20sp"/>

        <AutoCompleteTextView
            android:id="@+id/et_ramal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:completionThreshold="1" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/date"
            android:layout_marginTop="16dp"
            android:textSize="20sp"/>

        <EditText
            android:id="@+id/et_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="false"
            android:focusable="false"
            android:inputType="text"
            android:autofillHints="date"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/start_hour"
            android:layout_marginTop="16dp"
            android:textSize="20sp"/>

        <EditText
            android:id="@+id/et_start_hour"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="time"
            android:autofillHints="time"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/end_hour"
            android:layout_marginTop="16dp"
            android:textSize="20sp"/>

        <EditText
            android:id="@+id/et_end_hour"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="time"
            android:autofillHints="time"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/select_start_place"
            android:layout_marginTop="16dp"
            android:textSize="20sp"/>

        <Spinner
            android:id="@+id/selector_start_place"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            tools:listitem="@android:layout/simple_spinner_dropdown_item"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/select_end_place"
            android:layout_marginTop="16dp"
            android:textSize="20sp"/>

        <Spinner
            android:id="@+id/selector_end_place"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            tools:listitem="@android:layout/simple_spinner_dropdown_item"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/price"
            android:layout_marginTop="16dp"
            android:textSize="20sp"/>

        <EditText
            android:id="@+id/et_price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:autofillHints="price"/>

    </LinearLayout>

</androidx.core.widget.NestedScrollView>