<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/tabs_box"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:layout_constraintTop_toTopOf="parent"
    android:layout_marginTop="12dp"
    android:layout_marginHorizontal="36dp"
    app:strokeWidth="1dp"
    app:cardCornerRadius="18dp">

    <!-- tabIndicatorGravity=stretch paints selected -->
    <com.google.android.material.tabs.TabLayout
        android:id="@+id/rounded_tabs"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        app:tabGravity="fill"
        app:tabIndicatorColor="@color/bus_159"
        app:tabIndicatorGravity="stretch"
        app:tabSelectedTextColor="@color/white">

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/all"/>

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bus"/>

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/train"/>

    </com.google.android.material.tabs.TabLayout>

</com.google.android.material.card.MaterialCardView>