<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    android:id="@+id/top_card"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="20dp"
    android:layout_marginHorizontal="20dp"
    app:cardCornerRadius="5dp">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp">

        <TextView
            android:id="@+id/distance_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:drawableStartCompat="@drawable/ic_directions"
            android:drawablePadding="5dp"
            android:textSize="18sp"
            android:layout_marginVertical="5dp"
            android:text="@string/linear_distance_km"/>

        <TextView
            android:id="@+id/speed_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:drawableStartCompat="@drawable/ic_speed"
            android:drawablePadding="5dp"
            android:textSize="18sp"
            android:layout_marginVertical="5dp"
            android:text="@string/speed_kmh"/>

        <TextView
            android:id="@+id/direction_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:drawableStartCompat="@drawable/ic_near_me"
            android:drawablePadding="5dp"
            android:textSize="18sp"
            android:layout_marginVertical="5dp"
            android:text="@string/direction"/>

    </LinearLayout>

</androidx.cardview.widget.CardView>